--- a/views/ejsSample.ejs
+++ b/views/ejsSample.ejs
@@ -5,7 +5,7 @@
   <title>My First EJS 1</title>
 </head>
 <body>
-  <h1>I'm EJS One</h1><br>
+  <h1>이현영 바보</h1><br>
   Count: <%= count %>
 </body>
 </html>
