--- a/views/ejsSample.ejs
+++ b/views/ejsSample.ejs
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>My First EJS 1</title>
+  <title>홍현민테스트페이지</title>
 </head>
 <body>
-  <h1>이현영 바보</h1><br>
+  <h1>이현영은 슬비랑 이디야에 있다</h1><br>
   Count: <%= count %>
 </body>
 </html>
