--- a/views/ejsSample.ejs
+++ b/views/ejsSample.ejs
@@ -2,19 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>홍현민테스트페이지</title>
+  <title>test page</title>
 </head>
 <body>
-  <h1>이현영은 슬비랑 이디야에 있다 부럽다</h1><br>
-  <h2>이현영은 슬비랑 이디야에 있다 부럽다</h2><br>
-  <h3>이현영은 슬비랑 이디야에 있다 부럽다</h3><br>
-  <h4>이현영은 슬비랑 이디야에 있다 부럽다</h4><br>
-  <h5>이현영은 슬비랑 이디야에 있다 부럽다</h5><br>
-  <h1>뭐 먹을거냐!!</h1><br>
-  <h2>난 뭐 할까?</h2><br>
-  <h3>퇴근하고 집으로 가면 되는 건가?</h3><br>
-  <h4>여보 오늘 너무 녕드렁하다!!</h4><br>
-  <h5>힝..... 놀아라...</h5><br>
+  <h1>Test Sample</h1>
   Count: <%= count %>
 </body>
 </html>
