--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
 <!-- views/partials/footer.ejs -->
-
-<a href="#">
-footer
-</a>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="/bootstrap/js/bootstrap.min.js"></script>
+<footer>
+  <p>&copy; 2016 NGMG, Inc.</p>
+</footer>
