--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,7 @@
 <!-- views/partials/head.ejs -->
 
 <meta charset="utf-8">
-<link rel="stylesheet" href="/stylesheets/master.css">
-<title>My Sample</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="/bootstrap/css/bootstrap-theme.min.css">
+<title>녕구밍구 하우스</title>
