--- a/views/chats/chat.ejs
+++ b/views/chats/chat.ejs
@@ -35,7 +35,7 @@
               </form>
               <div id="box" class="box">
                 <script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
-                <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+                <script type="text/javascript" src="/js/jquery/jquery-1.11.3.js"></script>
                 <script>
                   var socket = io();
                   $('#chat').on('submit', function(e){
