--- a/views/chats/chat.ejs
+++ b/views/chats/chat.ejs
@@ -54,7 +54,8 @@
                   });
                   socket.on('receive message', function(msg){
                     $('#chatLog').append(msg+"\n");
-                    $('#chatLog').scrollTop($('#chatLog').innerHeight())
+                    //$('#chatLog').scrollTop($('#chatLog').innerHeight());
+                    $('#chatLog').scrollTop($('#chatLog')[0].scrollHeight);
                   });
                   /*
                   socket.on('change name', function(name){
