--- a/views/chats/chat.ejs
+++ b/views/chats/chat.ejs
@@ -4,7 +4,7 @@
     <% include ../partials/head %>
   </head>
   <body>
-    <div class="container theme-showcase">
+    <div class="container theme-showcase" id="chatDiv">
       <div class="page-header">
         <h3>녕구밍구 TALK</h3>
       </div>
@@ -16,7 +16,7 @@
               <% if(user) {%>
                 <span class="label label-primary" id="name" class="name"><%= user.nickname %></span>
               <% } else { %>
-                로그인 필수
+                로그인을 해주세요.
               <% } %>
             </h3>
           </div>
@@ -25,7 +25,12 @@
                 <a href="/posts"><button class="btn btn-sm btn-default">Home</button></a>
               </p>
               <textarea id="chatLog" class="chat_log" readonly="readonly" style="width:100%;" rows="10"></textarea>
+              <% if(user) {%>
               <form id="chat">
+                <div class="alert alert-success" role="alert">
+                  <span class="label label-success">ESC</span>  <strong>화면이 숨겨짐</strong>
+                  <span class="label label-success">`</span>  <strong>화면이 나타남</strong>
+                </div>
                 <div class="input-group">
                   <input type="text" id="message" name="message" class="form-control" placeholder="내용을 입력하세요..">
                   <span class="input-group-btn">
@@ -33,11 +38,13 @@
                   </span>
                 </div>
               </form>
+              <% } %>
               <div id="box" class="box">
                 <script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
                 <script type="text/javascript" src="/js/jquery/jquery-1.11.3.js"></script>
                 <script>
                   var socket = io();
+
                   $('#chat').on('submit', function(e){
                     if('' != $('#message').val()){
                       socket.emit('send message', $('#name').text(), $('#message').val());
@@ -45,6 +52,7 @@
                       e.preventDefault();
                     }
                   });
+
                   $('#chatBtn').on('click', function(e){
                     if('' != $('#message').val()){
                       socket.emit('send message', $('#name').text(), $('#message').val());
@@ -52,6 +60,16 @@
                       e.preventDefault();
                     }
                   });
+
+                  $(document).keydown(function(e){
+                    if(e.keyCode==27){
+                      $("#chatDiv").hide();
+                    }
+                    if(e.keyCode==192){
+                      $("#chatDiv").show();
+                    }
+                  });
+
                   socket.on('receive message', function(msg){
                     $('#chatLog').append(msg+"\n");
                     //$('#chatLog').scrollTop($('#chatLog').innerHeight());
