--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -24,7 +24,7 @@
               <a href="/logout" class="float_right"><button type="button" class="btn btn-sm btn-danger">Logout</button></a>
             <% } else { %>
               <a href="/login" class="float_right"><button type="button" class="btn btn-sm btn-primary">로그인</button></a>
-              <!--<a href="/users/new" class="float_right"><button type="button" class="btn btn-sm btn-success">회원가입</button></a>-->
+              <a href="/users/new" class="float_right"><button type="button" class="btn btn-sm btn-success">회원가입</button></a>
             <% } %>
           </p>
           <table class="table">
