--- a/views/chats/chat.ejs
+++ b/views/chats/chat.ejs
@@ -5,7 +5,7 @@
     <link href="/stylesheets/style.css" rel="stylesheet"/>
   </head>
   <body>
-    <div class="container theme-showcase" id="chatDiv">
+    <div class="container theme-showcase" id="chatDiv" style="max-width:760px;max-height:600px;">
       <div class="page-header">
         <h3>녕구밍구 TALK</h3>
       </div>
@@ -29,7 +29,7 @@
 
 
               <div class="background" >
-                <div class ="msgbox" id="messages" style="overflow-x:hidden;overflow-y:scroll;width:100%;height:400px;">
+                <div class ="msgbox" id="messages" style="overflow-x:hidden;overflow-y:scroll;width:100%;max-height:600px;">
               </div>
 
             <!--  <textarea id="chatLog" class="chat_log" readonly="readonly" style="width:100%;" rows="10"></textarea> -->
@@ -45,9 +45,6 @@
                   <input type="text" id="message" name="message" autocomplete="off" class="form-control" placeholder="내용을 입력하세요..">
                   <span class="input-group-btn">
                     <button class="btn btn-default" type="button" id="chatBtn">enter</button>
-                  </span>
-                  <span class="input-group-btn">
-                    <button class="btn btn-default" type="button" id="chatBtn2">call</button>
                   </span>
                 </div>
               </form>
