--- a/views/chats/chat.ejs
+++ b/views/chats/chat.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <% include ../partials/head %>
-    <link href="/stylesheets/style.css" rel="stylesheet"/>
+    <link href="/stylesheets/chat.css" rel="stylesheet"/>
   </head>
   <body>
     <div class="container theme-showcase" id="chatDiv" style="max-width:760px;max-height:600px;">
