--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -2,34 +2,24 @@
 <html>
   <head>
     <% include ../partials/head %>
+    <link href="/stylesheets/signin.css" rel="stylesheet"/>
   </head>
   <body>
-    <header>
-
-    </header>
-    <div class="login">
-<!-- main start-->
-
-<!-- views/login/login.ejs -->
-<div>
-  <h3>Loggin</h3>
-  <form class="login_form" action="/login" method="post">
-    <label>Email</label>
-    <input type="text" name="email" value="<%= email %>">
-    <label>Password</label>
-    <input type="password" name="password" value="">
-    <% loginError.forEach(function(e){ %>
-        <p class="error_message"><%= e %><p>
-    <% }) %>
-    <button class="submit_btn" type="submit">Submit</button>
-  </form>
-  <a href="javascript:history.back()"><button>Back</button>
-</div>
-
-<!-- main end -->
-    </div><!--login end -->
-    <footer>
-      <% include ../partials/footer %>
-    </footer>
+    <div class="container">
+      <form class="form-signin" action="/login" method="post">
+        <h2 class="form-signin-heading text-center">NGMG HOUSE</h2>
+        <label for="email" class="sr-only">Email address</label>
+        <input type="email" id="email" name="email" value="<%= email %>" class="form-control" placeholder="Email address" required autofocus>
+        <label for="password" class="sr-only">Password</label>
+        <input type="password" id="password" name="password" value="" class="form-control" placeholder="Password" required>
+        <% loginError.forEach(function(e){ %>
+            <p class="error_message"><%= e %><p>
+        <% }) %>
+        <p class="text-center">
+        <button class="btn btn-lg btn-primary" type="submit">로그인</button>
+        <a href="/posts" class="btn btn-lg btn-default">HOME</a>
+        </p>
+      </form>
+    </div> <!-- /container -->
   </body>
 </html>
