--- a/views/chats/chat.ejs
+++ b/views/chats/chat.ejs
@@ -1,132 +1,131 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <% include ../partials/head %>
-    <link href="/stylesheets/chat.css" rel="stylesheet"/>
-  </head>
-  <body>
+        <link href="/stylesheets/chat.css" rel="stylesheet" />
+</head>
+
+<body>
     <div class="container theme-showcase" id="chatDiv" style="max-width:760px;max-height:600px;">
-      <div class="page-header">
-        <h3>녕구밍구 TALK</h3>
-      </div>
-      <div class="row">
-       <div class="col-md-12">
-         <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">
-              <% if(user) {%>
-                <span class="label label-primary" id="name" class="name"><%= user.nickname %></span>
-              <% } else { %>
-                로그인을 해주세요.
-              <% } %>
-              <p class="text-right" id="joinMsg"></p>
-            </h3>
-          </div>
-          <div class="panel-body">
-              <p class="text-right">
-                <a href="/posts"><button class="btn btn-sm btn-default">Home</button></a>
-              </p>
-
-
-              <div class="background" >
-                <div class ="msgbox" id="messages" style="overflow-x:hidden;overflow-y:scroll;width:100%;max-height:600px;">
-              </div>
-
-            <!--  <textarea id="chatLog" class="chat_log" readonly="readonly" style="width:100%;" rows="10"></textarea> -->
-
-
-              <% if(user) {%>
-              <form id="chat">
-                <div class="alert alert-success" role="alert">
-                  <span class="label label-success">ESC</span>  <strong>화면이 숨겨짐</strong>
-                  <span class="label label-success">`</span>  <strong>화면이 나타남</strong>
-                </div>
-                <div class="input-group">
-                  <input type="text" id="message" name="message" autocomplete="off" class="form-control" placeholder="내용을 입력하세요..">
-                  <span class="input-group-btn">
-                    <button class="btn btn-default" type="button" id="chatBtn">enter</button>
-                  </span>
-                </div>
-              </form>
-              <% } %>
-              <div id="box" class="box">
-                <script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
-                <script type="text/javascript" src="/js/jquery/jquery-1.11.3.js"></script>
-                <script>
-                  var socket = io();
-
-                  socket.emit("join", { name: $('#name').text() });
-
-                  socket.on('join message', function(data){
-                    if(data.name != ''){
-                      $('#joinMsg').html('<span class="label label-info">'+data.name+' 입장.</span>');
-                    }
-                  });
-
-                  $('#chat').on('submit', function(e){
-                    if('' != $('#message').val()){
-                      socket.emit('send message', $('#name').text(), $('#message').val());
-                      $('#message').val("");
-                      e.preventDefault();
-                    }
-                  });
-
-                  $('#chatBtn').on('click', function(e){
-                    if('' != $('#message').val()){
-                      socket.emit('send message', $('#name').text(), $('#message').val());
-                      $('#message').val("");
-                      e.preventDefault();
-                    }
-                  });
-
-                  $('#chatBtn2').on('click', function(e){
-                    if('' != $('#message').val()){
-                      socket.emit('send message', $('#name').text(), $('#message').val());
-                      $('#message').val("");
-                      e.preventDefault();
-                    }
-                  });
-
-                  $(document).keydown(function(e){
-                    if(e.keyCode==27){
-                      $("#chatDiv").hide();
-                    }
-                    if(e.keyCode==192){
-                      $("#chatDiv").show();
-                    }
-                  });
-
-                  /*socket.on('receive message', function(msg){
-                    $('#chatLog').append(msg+"\n");
-                    //$('#chatLog').scrollTop($('#chatLog').innerHeight());
-                    $('#chatLog').scrollTop($('#chatLog')[0].scrollHeight);
-                  });*/
-
-                  socket.on('my message', function (msg) {
-                    $('#messages').append($('<p class="talk me">').text(msg));
-                    $('#messages').scrollTop($('#messages')[0].scrollHeight);
-                  });
-                  socket.on('other message', function (msg) {
-                    $('#messages').append($('<p class="talk other">').text(msg));
-                    $('#messages').scrollTop($('#messages')[0].scrollHeight);
-                  });
-
-
-                  /*
-                  socket.on('change name', function(name){
-                    $('#name').val(name);
-                  });
-                  */
-                </script>
-              </div>
-          </div>
+        <div class="page-header">
+            <h3>녕구밍구 TALK</h3>
         </div>
-       </div>
-      </div>
-      <!-- main start-->
-          <footer>
-            <% include ../partials/footer %>
-          </footer>
-    </div>
-  </body>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">
+                          <% if(user) {%>
+                            <span class="label label-primary" id="name" class="name"><%= user.nickname %></span>
+                          <% } else { %>
+                            로그인을 해주세요.
+                          <% } %>
+                          <p class="text-right" id="joinMsg"></p>
+                        </h3>
+                    </div>
+                    <div class="panel-body">
+                        <p class="text-right">
+                            <a href="/posts"><button class="btn btn-sm btn-default">Home</button></a>
+                        </p>
+                        <div class="background">
+                            <div class="msgbox" id="messages" style="overflow-x:hidden;overflow-y:scroll;width:100%;max-height:600px;">
+                            </div>
+                            <!--  <textarea id="chatLog" class="chat_log" readonly="readonly" style="width:100%;" rows="10"></textarea> -->
+                            <% if(user) {%>
+                                <form id="chat">
+                                    <div class="alert alert-success" role="alert">
+                                        <span class="label label-success">ESC</span> <strong>화면이 숨겨짐</strong>
+                                        <span class="label label-success">`</span> <strong>화면이 나타남</strong>
+                                    </div>
+                                    <div class="input-group">
+                                        <input type="text" id="message" name="message" autocomplete="off" class="form-control" placeholder="내용을 입력하세요..">
+                                        <span class="input-group-btn">
+                                          <button class="btn btn-default" type="button" id="chatBtn">enter</button>
+                                        </span>
+                                    </div>
+                                </form>
+                          <% } %>
+                            <div id="box" class="box">
+                                <script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
+                                <script type="text/javascript" src="/js/jquery/jquery-1.11.3.js"></script>
+                                <script>
+                                    var socket = io();
+
+                                    socket.emit("join", {
+                                        name: $('#name').text()
+                                    });
+
+                                    socket.on('join message', function(data) {
+                                        if (data.name != '') {
+                                            $('#joinMsg').html('<span class="label label-info">' + data.name + ' 입장.</span>');
+                                        }
+                                    });
+
+                                    $('#chat').on('submit', function(e) {
+                                        if ('' != $('#message').val()) {
+                                            socket.emit('send message', $('#name').text(), $('#message').val());
+                                            $('#message').val("");
+                                            e.preventDefault();
+                                        }
+                                    });
+
+                                    $('#chatBtn').on('click', function(e) {
+                                        if ('' != $('#message').val()) {
+                                            socket.emit('send message', $('#name').text(), $('#message').val());
+                                            $('#message').val("");
+                                            e.preventDefault();
+                                        }
+                                    });
+
+                                    $('#chatBtn2').on('click', function(e) {
+                                        if ('' != $('#message').val()) {
+                                            socket.emit('send message', $('#name').text(), $('#message').val());
+                                            $('#message').val("");
+                                            e.preventDefault();
+                                        }
+                                    });
+
+                                    $(document).keydown(function(e) {
+                                        if (e.keyCode == 27) {
+                                            $("#chatDiv").hide();
+                                        }
+                                        if (e.keyCode == 192) {
+                                            $("#chatDiv").show();
+                                        }
+                                    });
+
+                                    /*socket.on('receive message', function(msg){
+                                      $('#chatLog').append(msg+"\n");
+                                      //$('#chatLog').scrollTop($('#chatLog').innerHeight());
+                                      $('#chatLog').scrollTop($('#chatLog')[0].scrollHeight);
+                                    });*/
+
+                                    socket.on('my message', function(msg) {
+                                        $('#messages').append($('<p class="talk me">').text(msg));
+                                        $('#messages').scrollTop($('#messages')[0].scrollHeight);
+                                    });
+                                    socket.on('other message', function(msg) {
+                                        $('#messages').append($('<p class="talk other">').text(msg));
+                                        $('#messages').scrollTop($('#messages')[0].scrollHeight);
+                                    });
+
+
+                                    /*
+                                    socket.on('change name', function(name){
+                                      $('#name').val(name);
+                                    });
+                                    */
+                                </script>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- main start-->
+            <footer>
+                <% include ../partials/footer %>
+            </footer>
+        </div>
+</body>
 </html>
