--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <% include ../partials/head %>
-    <link href="/stylesheets/signin.css" rel="stylesheet"/>
-  </head>
-  <body>
+        <link href="/stylesheets/signin.css" rel="stylesheet" />
+</head>
+
+<body>
     <div class="container">
-      <form class="form-signin" action="/login" method="post">
-        <h2 class="form-signin-heading text-center">NGMG HOUSE</h2>
-        <label for="email" class="sr-only">Email address</label>
-        <input type="email" id="email" name="email" value="<%= email %>" class="form-control" placeholder="Email address" required autofocus>
-        <label for="password" class="sr-only">Password</label>
-        <input type="password" id="password" name="password" value="" class="form-control" placeholder="Password" required>
-        <% loginError.forEach(function(e){ %>
-            <p class="error_message"><%= e %><p>
-        <% }) %>
-        <p class="text-center">
-        <button class="btn btn-lg btn-primary" type="submit">로그인</button>
-        <a href="/posts" class="btn btn-lg btn-default">HOME</a>
-        </p>
-      </form>
-    </div> <!-- /container -->
-  </body>
+        <form class="form-signin" action="/login" method="post">
+            <h2 class="form-signin-heading text-center">NGMG HOUSE</h2>
+            <label for="email" class="sr-only">Email address</label>
+            <input type="email" id="email" name="email" value="<%= email %>" class="form-control" placeholder="Email address" required autofocus>
+            <label for="password" class="sr-only">Password</label>
+            <input type="password" id="password" name="password" value="" class="form-control" placeholder="Password" required>
+            <% loginError.forEach(function(e){ %>
+                <p class="error_message">
+                    <%= e %>
+                <p>
+            <% }) %>
+                <p class="text-center">
+                    <button class="btn btn-lg btn-primary" type="submit">로그인</button>
+                    <a href="/posts" class="btn btn-lg btn-default">HOME</a>
+                </p>
+        </form>
+    </div>
+    <!-- /container -->
+</body>
 </html>
