--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <% include ../partials/head %>
-    <link href="/stylesheets/jumbotron-narrow.css" rel="stylesheet"/>
-  </head>
-  <body>
-  <form id="create_user" class="users_form" action="/users" method="post">
-    <div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="/posts">Home</a></li>
-          </ul>
-        </nav>
-        <h3 class="text-muted">Sign Up</h3>
-      </div>
-      <ul class="list-group">
-        <li class="list-group-item">
-          <span class="label label-default">Email*</span> : <input type="text" id="email" name="user[email]" value="<%= formData?formData.email:"" %>">
-          <span id="email_error" class="error_message"><%= emailError?emailError:"" %></span>
-        </li>
-        <li class="list-group-item">
-          <span class="label label-default">Nickname*</span> : <input type="text" id="nickname" name="user[nickname]" value="<%= formData?formData.nickname:"" %>">
-          <span id="nickname_error" class="error_message"><%= nicknameError?nicknameError:"" %></span>
-        </li>
-        <li class="list-group-item">
-          <span class="label label-default">Password*</span> : <input type="password" id="password" name="user[password]" value="">
-          <span id="password_error" class="error_message"><%= passwordError?passwordError:"" %></span>
-        </li>
-        <li class="list-group-item">
-          <span class="label label-default">Password Confirmation*</span> : <input type="password" id="password_confirmation" name="user[passwordConfirmation]" value="">
-          <span id="password_confirmation_error" class="error_message"></span>
-        </li>
-      </ul>
-      <div class="btn-group" role="group" aria-label="..." style="float:right">
-        <button class="btn btn-default" role="button" type="button">회원가입</button>
-        <a class="btn btn-default" role="button" href="/posts">Back</a>
-      </div>
-    </div> <!-- /container -->
+        <link href="/stylesheets/jumbotron-narrow.css" rel="stylesheet" />
+</head>
+
+<body>
+    <form id="create_user" class="users_form" action="/users" method="post">
+        <div class="container">
+            <div class="header clearfix">
+                <nav>
+                    <ul class="nav nav-pills pull-right">
+                        <li role="presentation" class="active"><a href="/posts">Home</a></li>
+                    </ul>
+                </nav>
+                <h3 class="text-muted">Sign Up</h3>
+            </div>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <span class="label label-default">Email*</span> : <input type="text" id="email" name="user[email]" value="<%= formData?formData.email:" " %>">
+                    <span id="email_error" class="error_message"><%= emailError?emailError:"" %></span>
+                </li>
+                <li class="list-group-item">
+                    <span class="label label-default">Nickname*</span> : <input type="text" id="nickname" name="user[nickname]" value="<%= formData?formData.nickname:" " %>">
+                    <span id="nickname_error" class="error_message"><%= nicknameError?nicknameError:"" %></span>
+                </li>
+                <li class="list-group-item">
+                    <span class="label label-default">Password*</span> : <input type="password" id="password" name="user[password]" value="">
+                    <span id="password_error" class="error_message"><%= passwordError?passwordError:"" %></span>
+                </li>
+                <li class="list-group-item">
+                    <span class="label label-default">Password Confirmation*</span> : <input type="password" id="password_confirmation" name="user[passwordConfirmation]" value="">
+                    <span id="password_confirmation_error" class="error_message"></span>
+                </li>
+            </ul>
+            <div class="btn-group" role="group" aria-label="..." style="float:right">
+                <button class="btn btn-default" role="button" type="button">회원가입</button>
+                <a class="btn btn-default" role="button" href="/posts">Back</a>
+            </div>
+        </div>
+        <!-- /container -->
     </form>
     <!-- javascript -->
     <script type="text/javascript" src="/js/userform.js"></script>
-  </body>
+</body>
+
 </html>
