--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <% include ../partials/head %>
-    <link href="/stylesheets/jumbotron-narrow.css" rel="stylesheet"/>
-  </head>
-  <body>
-    <div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="/posts">Home</a></li>
-          </ul>
-        </nav>
-        <h3 class="text-muted">User Info</h3>
-      </div>
-      <div class="alert alert-success" role="alert">
-        <strong>Email</strong> <%= user.email %>
-        <br><strong>Nickname</strong> <%= user.nickname %>
-      </div>
 
-      <div class="btn-group" role="group" aria-label="..." style="float:right">
-        <% if(user) { %>
-          <a class="btn btn-default" href="/users/<%=user._id%>/edit">Edit</a>
-        <% } %>
-        <a class="btn btn-default" role="button" href="/posts">Back</a>
-      </div>
-    </div> <!-- /container -->
-  </body>
+<head>
+    <% include ../partials/head %>
+    <link href="/stylesheets/jumbotron-narrow.css" rel="stylesheet" />
+</head>
+<body>
+    <div class="container">
+        <div class="header clearfix">
+            <nav>
+                <ul class="nav nav-pills pull-right">
+                    <li role="presentation" class="active"><a href="/posts">Home</a></li>
+                </ul>
+            </nav>
+            <h3 class="text-muted">User Info</h3>
+        </div>
+        <div class="alert alert-success" role="alert">
+            <strong>Email</strong>
+            <%= user.email %>
+            <br><strong>Nickname</strong>
+            <%= user.nickname %>
+        </div>
+
+        <div class="btn-group" role="group" aria-label="..." style="float:right">
+            <% if(user) { %>
+              <a class="btn btn-default" href="/users/<%=user._id%>/edit">Edit</a>
+            <% } %>
+              <a class="btn btn-default" role="button" href="/posts">Back</a>
+        </div>
+    </div>
+    <!-- /container -->
+</body>
 </html>
